<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SQlite_database_info"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple_700">

        <ImageView
            android:id="@+id/back"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:padding="10dp"
            android:src="@drawable/back_ic"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="SQLite Database"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:layout_margin="5dp"
            android:textStyle="bold"
            android:layout_gravity="center"/>
    </LinearLayout>



    <androidx.core.widget.NestedScrollView

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Toast_info_Act"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Introduction to SQLite Database"
                android:textSize="25sp"
                android:textColor="@color/black"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Database is nothing but is a container that stores large number of data."
                android:textSize="20sp"
                android:layout_marginTop="20dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:textAlignment="center"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="What is SQLite Database ?"
                android:textSize="25sp"
                android:textColor="@color/black"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="SQLite Database is an open-source database provided in Android which is used to store data inside the user’s device in the form of a Text file."
                android:textSize="20sp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:textAlignment="center"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="SQLite is an offline database that is locally stored in the user’s device and we do not have to create any connection to connect to this database"
                android:textSize="20sp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:textAlignment="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Data is stored in the SQLite database in the form of tables"
                android:textSize="20sp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:textAlignment="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="When we stored this data in our SQLite database it is arranged in the form of tables that are similar to that of an excel sheet."
                android:textSize="20sp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:textAlignment="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Below is the representation of our SQLite database which we are storing in our SQLite database. "
                android:textSize="20sp"
                android:textColor="@color/black"
                android:layout_marginTop="10dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:textAlignment="center"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:layout_margin="20dp"
                android:src="@drawable/sq1"/>



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Important Methods in SQLite Database"
                android:textSize="25sp"
                android:textColor="@color/black"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Below are the several important methods that we will be using in this SQLite database integration in Android. "
                android:textSize="20sp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:textAlignment="center"/>



            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:layout_margin="20dp"
                android:src="@drawable/sq2"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="In SQLite Database We perform CRUD operations"
                android:textSize="25sp"
                android:textColor="@color/black"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="CRUD operations stand for :-"
                android:textSize="25sp"
                android:textColor="@color/black"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="C = Create"
                android:textSize="25sp"
                android:textColor="@color/black"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="R = Read"
                android:textSize="25sp"
                android:textColor="@color/black"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"/>



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="U = Update"
                android:textSize="25sp"
                android:textColor="@color/black"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="D = Delete"
                android:textSize="25sp"
                android:textColor="@color/black"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"/>



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="SQLITE DATABASE is huge and important topic,  below are the 4 links  provided on how to create, read, update and delete Database."
                android:textSize="25sp"
                android:textColor="@color/black"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"/>


            <TextView
                android:id="@+id/create_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create"
                android:textSize="25sp"
                android:textColor="@color/black"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"/>

            <TextView
                android:id="@+id/read_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/read"
            android:textSize="25sp"
            android:textColor="@color/black"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"/>


            <TextView
                android:id="@+id/update_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/update"
                android:textSize="25sp"
                android:textColor="@color/black"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"/>
            <TextView
                android:id="@+id/delete_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete"
                android:textSize="25sp"
                android:textColor="@color/black"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"/>







        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</LinearLayout>

